--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -3028,6 +3028,7 @@ classification-rule-help=Een classificatieregel specificeert de kenmerken van de
 classification-rules=Classificatieregels
 classification-rules-for-x=Classificatieregels voor {0}
 clause-contributors=Componentbijdragers
+clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
 clay-card-display-types=Weergavetypes kleikaart
 clean-up-actions=Opschoonacties
 clean-up-chat-module-data=Gegevens chatmodule opschonen.
@@ -5482,8 +5483,9 @@ element-id-help=Gebruik deze optie om handmatig klikbare elementen te selecteren
 element-json=Element-JSON
 element-removed=Element verwijderd
 element-sets=Elementensets
+element-source=Element Source (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
 element-source-json=Elementbron (JSON)
-element-source-json-help=Dit is de JSON-weergave van het element.
 element-template=Elementsjabloon
 element-was-added=Het element is toegevoegd.
 element-was-removed=Het element is verwijderd.
@@ -12968,6 +12970,7 @@ search-for-step-name=Naam stap zoeken ...
 search-for-x=Naar '{0}' zoeken
 search-form=Zoekformulier
 search-framework-indexer-clauses=Indexerstructuurcomponenten zoeken
+search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Met deze instelling kunt u bijna alle standaardcomponenten uitschakelen die door de indexerstructuur van Liferay gegenereerd worden. Om te beginnen met alleen het absolute minimum aan bijgedragen zoekcomponenten van Liferay, moet u op deze pagina ook alle componentbijdragers uitschakelen.
 search-framework-indexer-clauses-warning=Indexercomponenten uitschakelen kan onverwachte problemen veroorzaken.
 search-framework-query-contributors=Querybijdragers zoekstructuur
@@ -17662,6 +17665,7 @@ x-tasks-have-been-reassigned={0} taken werden opnieuw toegewezen.
 x-template={0} sjabloon
 x-thread={0} thread
 x-threads={0} threads
+x-to-setup-blueprint-options={0} to setup blueprint options. (Automatic Copy)
 x-updated-a-comment-to-x={0} heeft een reactie op {1} bijgewerkt.
 x-updated-a-web-content-article={0} heeft een webinhoudartikel bijgewerkt.
 x-updated-a-x={0} heeft een {1} bijgewerkt.
