--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -3028,6 +3028,7 @@ classification-rule-help=En klassificeringsregel specificerar egenskaperna hos e
 classification-rules=Lägg till klassificeringsregel
 classification-rules-for-x=Klassificeringsregler för {0}
 clause-contributors=Klausuldeltagare
+clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
 clay-card-display-types=Visningstyper för Clay-kort
 clean-up-actions=Åtgärder för att rensa
 clean-up-chat-module-data=Moduldata för att rensa chatt.
@@ -5482,8 +5483,9 @@ element-id-help=Använd det här alternativet för att välja klickbara element 
 element-json=Elements-JSON
 element-removed=Element har tagits bort
 element-sets=Elementuppsättningar
+element-source=Element Source (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
 element-source-json=Elementkälla (JSON)
-element-source-json-help=Det här är en JSON-representation av elementet.
 element-template=Elementmall
 element-was-added=Element har lagts till.
 element-was-removed=Element har tagits bort.
@@ -12965,6 +12967,7 @@ search-for-step-name=Sök efter stegnamn...
 search-for-x=Sök efter '{0}'
 search-form=Sökformulär
 search-framework-indexer-clauses=Sök efter klausuler för ramverksindexerare
+search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Den här inställningen kan inaktivera alla standardklausuler som genereras av Liferays indexerarramverk. För att starta med minimum av Liferays sökklausuler måste du även inaktivera alla klausuldeltagare på den här sidan.
 search-framework-indexer-clauses-warning=Om du inaktiverar indexerarklausuler kan oväntade problem uppstå.
 search-framework-query-contributors=Sök efter deltagare för ramverksfråga
@@ -17659,6 +17662,7 @@ x-tasks-have-been-reassigned={0} uppgifter har fått ny uppdragsinnehavare.
 x-template={0} mall
 x-thread={0} tråd
 x-threads={0} trådar
+x-to-setup-blueprint-options={0} to setup blueprint options. (Automatic Copy)
 x-updated-a-comment-to-x={0} har uppdaterat en kommentar till {1}.
 x-updated-a-web-content-article={0} har uppdaterat en webbinnehållsartikel.
 x-updated-a-x={0} har uppdaterat en/ett {1}.
