--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -3028,6 +3028,7 @@ classification-rule-help=Una regla de classificació especifica les característ
 classification-rules=Regles de classificació
 classification-rules-for-x=Regles de classificació per a {0}
 clause-contributors=Contribuïdors de la frase
+clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
 clay-card-display-types=Tipus de visualització de targeta Clay
 clean-up-actions=Neteja les accions
 clean-up-chat-module-data=Neteja les dades del mòdul del xat.
@@ -5482,8 +5483,9 @@ element-id-help=Feu servir aquesta opció per seleccionar els elements clicables
 element-json=Element JSON
 element-removed=Element suprimit
 element-sets=Conjunts d'elements
+element-source=Element Source (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
 element-source-json=Element font (JSON)
-element-source-json-help=Aquesta és la representació JSON de l'element.
 element-template=Plantilla de l'element
 element-was-added=S'ha afegit l'element.
 element-was-removed=S'ha suprimit l'element.
@@ -12967,6 +12969,7 @@ search-for-step-name=Cerca un nom de pas...
 search-for-x=Cerca '{0}'
 search-form=Formulari de cerca
 search-framework-indexer-clauses=Cerca les frases de l'indexador de l'entorn de treball
+search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Aquest paràmetre pot deshabilitar gairebé totes les frases estàndard generades per l'entorn de treball de l'indexador de Liferay. Per començar amb el mínim imprescindible de frases de cerca relacionades amb Liferay, també heu de deshabilitar tots els contribuïdors de frases en aquesta pàgina.
 search-framework-indexer-clauses-warning=Deshabilitar les frases de l'indexador pot provocar problemes inesperats.
 search-framework-query-contributors=Cerca els contribuïdors de consulta de l'entorn de treball
@@ -17661,6 +17664,7 @@ x-tasks-have-been-reassigned=S'han reassignat {0} tasques.
 x-template=Plantilla de {0}
 x-thread={0} fil
 x-threads={0} fils
+x-to-setup-blueprint-options={0} to setup blueprint options. (Automatic Copy)
 x-updated-a-comment-to-x={0} ha actualitzat el comentari a {1}.
 x-updated-a-web-content-article={0} ha actualitzat un article de contingut web.
 x-updated-a-x={0} ha actualitzat {1}.
