--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -3028,6 +3028,7 @@ classification-rule-help=Luokittelu säännöt määrittelevät laitteiden omina
 classification-rules=Luokittelusäännöt
 classification-rules-for-x=Luokittelu säännöt [0}:lle.
 clause-contributors=Lauseketekijät
+clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
 clay-card-display-types=Clay-korttien näyttötyypit
 clean-up-actions=Siivoustoiminnat
 clean-up-chat-module-data=Puhdista chat-moduulin tiedot.
@@ -5482,8 +5483,9 @@ element-id-help=Käytä tätä valintaa valitaksesi napsautettavat elementit man
 element-json=Elementin JSON
 element-removed=Elementti poistettu
 element-sets=Elementtisarjat
+element-source=Element Source (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
 element-source-json=Elementin lähde (JSON)
-element-source-json-help=Tämä on elementin JSON-esitys.
 element-template=Elementtimalli
 element-was-added=Elementti lisättiin.
 element-was-removed=Elementti poistettiin.
@@ -12964,6 +12966,7 @@ search-for-step-name=Etsi Vaiheen Nimeä...
 search-for-x=Hae '{0}':aa
 search-form=Hakulomake
 search-framework-indexer-clauses=Hakukehyksen indeksoijan lauseet
+search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Tämä asetus voi poistaa käytöstä lähes kaikki Liferayn indeksoijakehyksen luomat vakiolausekkeet. Aloittaaksesi vain välttämättömillä Liferayn hakulausekkeilla sinun täytyy myös poistaa käytöstä kaikki lausetekijät tällä sivulla.
 search-framework-indexer-clauses-warning=Indeksoijan lauseiden poistaminen käytöstä voi aiheuttaa odottamattomia ongelmia.
 search-framework-query-contributors=Hakukehyksen kyselytekijät
@@ -17657,6 +17660,7 @@ x-tasks-have-been-reassigned={0} tehtävää on määritetty uudelleen.
 x-template={0} Malli
 x-thread={0} keskusteluketju
 x-threads={0} viestiketjua
+x-to-setup-blueprint-options={0} to setup blueprint options. (Automatic Copy)
 x-updated-a-comment-to-x={0} päivitetty kommentti {1}n.
 x-updated-a-web-content-article={0} päivitti web-sisällön artikkelin.
 x-updated-a-x={0} päivitetty {1}.
