LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -2495,7 +2495,7 @@ cancel=Annuler
 cancel-agreement=Annuler l'accord
 cancel-all-uploads=Annuler tous les téléchargements
 cancel-and-leave=Annuler et quitter
-cancel-checkout[document]=Annuler le checkout
+cancel-checkout[document]=Annuler la mise à jour
 cancel-edit=Annuler les modifications
 cancel-expiration=Annuler l'expiration
 cancel-export=Annuler l'exportation
