--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -9316,7 +9316,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=वाणिज्य मूल्य सूची (Automatic Translation)
 model.resource.com.liferay.commerce.notification=वाणिज्य अधिसूचना (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=कॉमर्स नोटिफिकेशन टेम्पलेट (Automatic Translation)
-model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order=वाणिज्य आदेश
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
