LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -9318,7 +9318,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Tipus de comanda de 
 model.resource.com.liferay.commerce.model.CommercePriceList=Llista de preus de comerç
 model.resource.com.liferay.commerce.notification=Notificació de comerç
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Plantilla de notificació de comerç
-model.resource.com.liferay.commerce.order=Comanda de comerç
+model.resource.com.liferay.commerce.order=Comandes de comerç
 model.resource.com.liferay.commerce.order.rule=Regles de comanda de comerç
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Regla de comanda de comerç
 model.resource.com.liferay.commerce.order.type=Tipus de comanda de comerç
