--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -9316,7 +9316,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Kauppatilaustyyppi
 model.resource.com.liferay.commerce.model.CommercePriceList=Kaupankäyntihinnasto
 model.resource.com.liferay.commerce.notification=Kaupankäynnin Ilmoitus
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Kaupallinen Ilmoitusmalli
-model.resource.com.liferay.commerce.order=Kauppatilaus
+model.resource.com.liferay.commerce.order=Kauppatilaukset
 model.resource.com.liferay.commerce.order.rule=Kauppatilaussäännöt
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Kauppatilaussääntö
 model.resource.com.liferay.commerce.order.type=Kauppatilaustyypit
