--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -9316,7 +9316,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Liste de prix commerciale
 model.resource.com.liferay.commerce.notification=Notification commerciale
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Modèle de notification de commerce
-model.resource.com.liferay.commerce.order=Commande commerciale
+model.resource.com.liferay.commerce.order=Commandes commerciales
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
