--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -7929,7 +7929,7 @@ javax.portlet.title.com_liferay_portal_search_web_suggestions_portlet_Suggestion
 javax.portlet.title.com_liferay_portal_search_web_tag_facet_portlet_TagFacetPortlet=Tag Facet (Automatic Translation)
 javax.portlet.title.com_liferay_portal_search_web_type_facet_portlet_TypeFacetPortlet=Tipo sfaccettature (Automatic Translation)
 javax.portlet.title.com_liferay_portal_search_web_user_facet_portlet_UserFacetPortlet=Sfaccettature utente (Automatic Translation)
-javax.portlet.title.com_liferay_portal_security_audit_web_portlet_AuditPortlet=revisione (Automatic Translation)
+javax.portlet.title.com_liferay_portal_security_audit_web_portlet_AuditPortlet=Audit
 javax.portlet.title.com_liferay_portal_security_service_access_policy_web_portlet_SAPPortlet=Politiche di accesso ai servizi
 javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Impostazioni istanza
 javax.portlet.title.com_liferay_portal_workflow_instance_tracker_web_internal_portlet_WorkflowInstanceTrackerPortlet=Workflow Instance Tracker (Automatic Copy)
@@ -7956,7 +7956,7 @@ javax.portlet.title.com_liferay_push_notifications_web_portlet_PushNotifications
 javax.portlet.title.com_liferay_questions_web_internal_portlet_QuestionsPortlet=Domande
 javax.portlet.title.com_liferay_ratings_page_ratings_web_portlet_PageRatingsPortlet=Valutazioni di pagina
 javax.portlet.title.com_liferay_reading_time_web_portlet_ReadingTimePortlet=Tempo di lettura
-javax.portlet.title.com_liferay_redirect_web_internal_portlet_RedirectPortlet=reindirizzamento (Automatic Translation)
+javax.portlet.title.com_liferay_redirect_web_internal_portlet_RedirectPortlet=Redirection
 javax.portlet.title.com_liferay_remote_app_admin_web_portlet_RemoteAppAdminPortlet=App remote (Automatic Translation)
 javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Ruoli
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Selettore ruoli
@@ -7987,7 +7987,7 @@ javax.portlet.title.com_liferay_site_teams_web_portlet_SiteTeamsPortlet=Team del
 javax.portlet.title.com_liferay_social_activities_web_portlet_SocialActivitiesPortlet=Attività
 javax.portlet.title.com_liferay_staging_bar_web_portlet_StagingBarPortlet=Barra di Staging
 javax.portlet.title.com_liferay_staging_configuration_web_portlet_StagingConfigurationPortlet=Configurazione Staging
-javax.portlet.title.com_liferay_staging_processes_web_portlet_StagingProcessesPortlet=Gestione temporanea (Automatic Translation)
+javax.portlet.title.com_liferay_staging_processes_web_portlet_StagingProcessesPortlet=Staging
 javax.portlet.title.com_liferay_style_book_web_internal_portlet_StyleBookPortlet=Libri di stile (Automatic Translation)
 javax.portlet.title.com_liferay_subscription_web_internal_portlet_UnsubscribePortlet=Annulla iscrizione
 javax.portlet.title.com_liferay_template_web_internal_portlet_TemplatePortlet=Templates (Automatic Copy)
@@ -8520,7 +8520,7 @@ list-users-with-the-permission-to-perform-the-action=Elenco degli utenti con il 
 list-view=Visualizzazione Lista
 lists=Elenchi
 liter=Litro
-live=vivere (Automatic Translation)
+live=Live
 live-group-remote-staging-alert=Il sito corrente è un sito live di un sito di staging remoto. Può essere abilitato per come sito di staging per ottenere più livelli di staging sebbene alcune opzioni di staging sono state disabilitate.
 live-session=Sessioni Attive
 live-sessions=Sessioni Attive
