--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -9319,7 +9319,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Bestellingtype hande
 model.resource.com.liferay.commerce.model.CommercePriceList=Handelsprijslijst
 model.resource.com.liferay.commerce.notification=Handelsmelding
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Meldingsjabloon winkel
-model.resource.com.liferay.commerce.order=Handelsorder
+model.resource.com.liferay.commerce.order=Handelsorders
 model.resource.com.liferay.commerce.order.rule=Orderregels Commerce
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Orderregel Commerce
 model.resource.com.liferay.commerce.order.type=Ordertypes Commerce
