--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -9316,7 +9316,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Typ av handelsorder
 model.resource.com.liferay.commerce.model.CommercePriceList=Handelsprislista
 model.resource.com.liferay.commerce.notification=Handelsavisering
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Handelsaviseringsmall
-model.resource.com.liferay.commerce.order=Handelsbeställning
+model.resource.com.liferay.commerce.order=Handelsbeställningar
 model.resource.com.liferay.commerce.order.rule=Regler för handelsorder
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Regel för handelsorder
 model.resource.com.liferay.commerce.order.type=Typer av handelsorder
