--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -9318,7 +9318,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Tipo de pedido de co
 model.resource.com.liferay.commerce.model.CommercePriceList=Lista de precios de comercio
 model.resource.com.liferay.commerce.notification=Notificación de comercio
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Plantilla de notificación de comercio
-model.resource.com.liferay.commerce.order=Pedido de comercio
+model.resource.com.liferay.commerce.order=Pedidos de comercio
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
