--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -9316,7 +9316,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=لیست قیمت های تجاری
 model.resource.com.liferay.commerce.notification=اطلاع رسانی بازرگانی (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=الگوی اعلانات تجاری
-model.resource.com.liferay.commerce.order=سفارش تجازی
+model.resource.com.liferay.commerce.order=سفارشات بازرگانی
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
