--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -9316,7 +9316,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Tipo de pedido de co
 model.resource.com.liferay.commerce.model.CommercePriceList=Lista de Preço do Comércio
 model.resource.com.liferay.commerce.notification=Notificação comercial
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Modelo de notificação de comércio
-model.resource.com.liferay.commerce.order=Pedido do comércio
+model.resource.com.liferay.commerce.order=Pedidos comerciais
 model.resource.com.liferay.commerce.order.rule=Regras de pedido de comércio
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Regra de pedido de comércio
 model.resource.com.liferay.commerce.order.type=Tipos de pedido de comércio
